[gd_scene load_steps=11 format=3 uid="uid://w4gbnan2fxvp"]

[ext_resource type="Script" path="res://Scripts/Erdbruch.gd" id="1_5e3o3"]
[ext_resource type="PackedScene" uid="uid://did1lmobv5wea" path="res://Scenes/hitBox.tscn" id="2_g06tg"]
[ext_resource type="Texture2D" uid="uid://dg3ql6jiiq7b2" path="res://Assets/EarthQuackSpell-Sheet.webp" id="3_cjclx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_errwb"]
radius = 64.0
height = 198.0

[sub_resource type="AtlasTexture" id="AtlasTexture_j4bo2"]
atlas = ExtResource("3_cjclx")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lngst"]
atlas = ExtResource("3_cjclx")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_78lwi"]
atlas = ExtResource("3_cjclx")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cgwa"]
atlas = ExtResource("3_cjclx")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_76200"]
atlas = ExtResource("3_cjclx")
region = Rect2(400, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_lmdge"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4bo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lngst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78lwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cgwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76200")
}],
"loop": true,
"name": &"beeben",
"speed": 10.0
}]

[node name="Erdbruch" type="Node2D"]
script = ExtResource("1_5e3o3")
duration = 5.0
tempCouldown = 3.0
wut = 50

[node name="HitBox" parent="." instance=ExtResource("2_g06tg")]
collision_mask = 4
dmg = 12.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_errwb")

[node name="durationTimer" type="Timer" parent="."]
one_shot = true

[node name="PausebetweenAttack" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2.375, -7.875)
scale = Vector2(2.3125, 1.7575)
sprite_frames = SubResource("SpriteFrames_lmdge")
animation = &"beeben"
frame_progress = 0.901116

[connection signal="timeout" from="durationTimer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="PausebetweenAttack" to="." method="_on_pausebetween_attack_timeout"]
